All figures on top of page.

--- a/paper1.tex
+++ b/paper1.tex
@@ -151,7 +151,7 @@ primary star spectral types earlier than B3, which are also strong
 x-ray emitters \citep{Gagne1997} and will drown out any companions.
 
 
-\begin{figure*}[t]
+\begin{figure}[t]
   \centering
   \includegraphics[width=\columnwidth]{Figures/paper1_fig1.pdf}
   \caption{This figure illustrates the approximate flux ratio limit to
@@ -169,7 +169,7 @@ $4\sigma$. \emph{Bottom panel}: Same as the middle panel, but the
 model spectrum was added to the residuals with a 50 km s$^{-1}$ velocity
 offset.}
   \label{paper1_fig:method}
-\end{figure*}
+\end{figure}
 
 In this paper, we introduce a technique that is sensitive to young binary
 systems with secondary temperatures $4000$ K $\lesssim T_\mathrm{eff} \lesssim
@@ -216,7 +216,7 @@ than the noise.  Nonetheless, the bottom two panels show that a cross-correlatio
 have a peak with high significance at the velocity of the secondary star.
 
 
-\begin{figure*}[t]
+\begin{figure}[t]
   \centering
   \includegraphics[width=\columnwidth]{Figures/paper1_fig2.pdf}
   \caption{\emph{Top panel}: The telluric spectrum (absorption due to Earth's
@@ -227,7 +227,7 @@ have a peak with high significance at the velocity of the secondary star.
     lines is comparable to or greater than that of the star model, and many of the
     telluric lines are stronger than the stellar lines.}
   \label{paper1_fig:telluric}
-\end{figure*}
+\end{figure}
 
 A careful choice of the wavelength region is critical for the direct spectral 
 detection method. First, we want a wavelength region where the B-star spectrum
@@ -331,7 +331,7 @@ star. We count all nodding positions taken on a given night with the same
 detector wavelength setting as one observation.
 
 
-\begin{figure*}[ht]
+\begin{figure}[t]
   \centering
   \includegraphics[width=\columnwidth]{Figures/paper1_fig3.pdf}
   \caption{The telluric correction steps for chip three of CRIRES
@@ -342,7 +342,7 @@ detector wavelength setting as one observation.
     $2328.5$, $2331$, and $2335$ nm. \emph{Bottom panel:} Correction
     after fitting the large residuals to Gaussians. }
   \label{correctionsteps}
-\end{figure*}
+\end{figure}
 
 
 
@@ -505,13 +505,13 @@ reject the candidate.
 
 
 
-\begin{figure*}[ht]
+\begin{figure}[t]
   \centering
   \includegraphics[width=\columnwidth]{Figures/paper1_fig4.pdf}
   \caption{Cross-correlation for HIP 26713, using a 5600 K star model spectrum as template. The y-axis is in units of
     the standard deviation of the cross-correlation function. The peak is very near the maximum velocity of $|v_\mathrm{max}| = 256$ km s$^{-1}$, assuming a circular orbit (see equation \ref{paper1_eqn:vmax}). The likelihood of observing the system nearly edge on and at a quadrature point, so that $|v| \sim |v_\mathrm{max}|$, is $p \approx 0.01$. However, it is possible that the system has an eccentric orbit, effectively increasing $|v_\mathrm{max}|$.}
   \label{paper1_fig:hip26713}
-\end{figure*}
+\end{figure}
 
 Next, we determined whether the signal-to-noise ratio and telluric line removal in a given observation would allow us to detect the candidate companion star.
 To do this, we added a model atmosphere with the
@@ -599,7 +599,7 @@ If HIP 26713 is a true binary system, evolutionary tracks by \cite
 The mass of the primary star is $9.4 \pm 0.2 M_{\odot}$ \citep
 {Tetzlaff2010}, giving a mass-ratio of $q = 0.17 \pm 0.02$. For a circular orbit, the corresponds to an orbital period of 10.0 days. If the companion star is on an eccentric orbit, its true period would be longer than this.
 
-\begin{figure*}[ht]
+\begin{figure}[t]
   \centering
   \includegraphics[width=5.7in]{Figures/paper1_fig5.pdf}
   \caption{Cross-correlations for HIP 92855, for all dates observed. A 6100 K star model spectrum is used as the template for each cross-correlation. The y-axis is in units of
@@ -609,7 +609,7 @@ The mass of the primary star is $9.4 \pm 0.2 M_{\odot}$ \citep
   as probably arising from imperfect telluric line removal or random noise, since it
   has $v>v_\mathrm{max}$ given by equation \ref{paper1_eqn:vmax}.}
   \label{paper1_fig:hip92855}
-\end{figure*}
+\end{figure}
 
 
 
@@ -643,7 +643,7 @@ a single large peak. We consider this an excellent candidate for
 follow-up observations. 
 
 
-\begin{figure*}[ht]
+\begin{figure}[t]
   \centering
   \includegraphics[width=5.5in]{Figures/paper1_fig6.pdf}
   \caption{Completeness diagram for the full sample of main-sequence B
@@ -657,7 +657,7 @@ follow-up observations.
   \ref{paper1_sec:completeness}). Contours are drawn to guide the eye. The red 
   areas in each plot indicate the regions for which our sample is complete.}
   \label{paper1_fig:completeness}
-\end{figure*}
+\end{figure}
 
 If HIP 92855 is a true binary system, evolutionary tracks by
 \cite{Landin2008} give a secondary star mass of $1.2 \pm 0.2 M_{\odot}$. The mass of the
@@ -711,7 +711,7 @@ that region would be detected. For primary stars with $M < 10 M_{\odot}$, we are
 
 
 
-\begin{figure*}[ht]
+\begin{figure}[t]
   \centering
   \includegraphics[width=\columnwidth]{Figures/paper1_fig7.pdf}
   \caption{Estimates of the binary fraction of B0-B5 stars,
@@ -725,7 +725,7 @@ that region would be detected. For primary stars with $M < 10 M_{\odot}$, we are
     \cite{Evans2011} value is a \emph{lower} limit and an average over all mass-ratios from $0.1 < q < 0.3$, but they estimate
     that their sample is very complete, and so the true multiplicity fraction is quite close to their value.}
   \label{paper1_fig:limits}
-\end{figure*}
+\end{figure}
 
 
 \section{Multiplicity Fraction}
