--- a/paper2.tex
+++ b/paper2.tex
@@ -279,7 +279,7 @@ HD 102956  & 5.66 & 2.06\e{-04} & 2935 & 253.0
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\begin{figure}[ht]
+\begin{figure}[t]
   \centering
   \includegraphics[width=6.5in]{Figures/paper2_fig1.pdf}
   \caption{Telluric Correction process. \emph{Top Panel}: Original
@@ -292,7 +292,7 @@ HD 102956  & 5.66 & 2.06\e{-04} & 2935 & 253.0
 \end{figure}
 
 
-\begin{figure}[ht]
+\begin{figure}[t]
   \centering
   \includegraphics[width=6.5in]{Figures/paper2_fig2.pdf}
   \caption{\emph{Top Panel}: Individual cross-correlation functions for simulations of HD 189733 with an average S/N = 500, and with complete heat redistribution. The velocities are shifted at each orbital phase such that the cross-correlation function should have a peak at 0 km s$^{-1}$; the planet is only detected in a few of the observations. \emph{Bottom panel}: The total cross-correlation function, after adding the cross-correlation functions for each individual observation. Here the planet is very clearly detected with $6.29 \sigma$ significance.}
@@ -300,7 +300,7 @@ HD 102956  & 5.66 & 2.06\e{-04} & 2935 & 253.0
 \end{figure}
 
 
-\begin{figure}[ht]
+\begin{figure}[t]
   \centering
   \includegraphics[width=5.5in]{Figures/paper2_fig3.pdf}
   \caption{A comparison of the HD189733 planet model with the HD209458
@@ -314,7 +314,7 @@ HD 102956  & 5.66 & 2.06\e{-04} & 2935 & 253.0
 \end{figure}
 
 
-\begin{figure}[ht]
+\begin{figure}[t]
   \centering
   \includegraphics[width=6.5in]{Figures/paper2_fig4.pdf}
   \caption{A summary of the significance of the point at 0 km s$^{-1}$ in the total cross-correlation functions for each of the mass-ratio guesses, for a series of observations of HD 189733 with an average S/N = 500 and complete heat redistribution (the same as in Figure \ref{paper2_fig:allcorr}). The peak in this figure determines the planet to star mass-ratio, and therefore the true planet mass. The width of the peak $1 \sigma$ below its maximum determines the uncertainty in the planet mass.}
