--- a/paper3.tex
+++ b/paper3.tex
@@ -136,7 +136,7 @@ We would like to thank Andreas Seifahrt for his help in the early stages of code
 %--------------------------------------------------------------------------------------
 
 
-\begin{figure}
+\begin{figure}[t]
 \begin{center}
 \subfloat{\includegraphics[width=0.4\textwidth, height=0.23\textheight]{Figures/paper3_BstarCorr_590nm.pdf}} 
 \subfloat{\includegraphics[width=0.4\textwidth,height=0.23\textheight]{Figures/paper3_BstarCorr_650nm.pdf}}
@@ -153,7 +153,7 @@ We would like to thank Andreas Seifahrt for his help in the early stages of code
 
 %--------------------------------------------------------------------------------------
 
-\begin{figure}
+\begin{figure}[t]
 \begin{center}
 \subfloat{\includegraphics[height=0.33\textheight]{Figures/paper3_BstarCorr_630nm.pdf}}
 \\ 
@@ -166,7 +166,7 @@ We would like to thank Andreas Seifahrt for his help in the early stages of code
 
 %--------------------------------------------------------------------------------------
 
-\begin{figure}
+\begin{figure}[t]
 \begin{center}
 \subfloat{\includegraphics[width=0.4\textwidth,height=0.23\textheight]{Figures/paper3_Empirical_690nm.pdf}}
 \subfloat{\includegraphics[width=0.4\textwidth,height=0.23\textheight]{Figures/paper3_Empirical_730nm.pdf}}
@@ -183,7 +183,7 @@ We would like to thank Andreas Seifahrt for his help in the early stages of code
 %--------------------------------------------------------------------------------------
 
 
-\begin{figure}[ht]
+\begin{figure}[t]
   \centering
   \subfloat{\includegraphics[height=0.33\textheight]{Figures/paper3_GJ908_Telluric.pdf}}
   \\
@@ -195,7 +195,7 @@ We would like to thank Andreas Seifahrt for his help in the early stages of code
 
 %--------------------------------------------------------------------------------------
 
-\begin{figure}[ht]
+\begin{figure}[t]
   \centering
   \includegraphics[width=\columnwidth]{Figures/paper3_SodiumLineProfile_BW.pdf}
   \caption{The evolution of the sodium doublet line profile with spectral type for a series of main-sequence M-type stars. The later spectral types show significantly broader line wings.}
