--- a/paper6.tex
+++ b/paper6.tex
@@ -61,11 +61,11 @@ As part of the follow-up effort, we used the NIRI instrument behind the Altair a
 We measure the flux and position of both stars by fitting a 2D Moffat function \citep{Moffat1969} to both stars simultaneously, constraining the shape parameters for both functions to be the same. The ratio of the amplitudes gives the magnitude difference, and the pixel locations along with the detector pixel scale gives the separation and position angle between the stars. We note that the goal of these images was confirmation and we did not observe any reference targets to make a distortion map and correct the image rotation. The uncertainty in position angle and to a lesser degree separation quoted in Table \ref{paper6_tab:imaging_obs} is likely underestimated.
 
 
-\begin{figure*}
+\begin{figure}[t]
 \includegraphics[width=\textwidth]{Figures/paper6_HIP_109139.pdf}
 \caption{\emph{Left}: Cross-correlation function between the observed spectra of HIP 109139 and a $5700\ K$ Phoenix model spectra. The detection at two dates shows significant velocity variation, indicating orbital motion with a short period. \emph{Right}: Peak CCF height as a function of Phoenix model spectra template temperature. The maxima of the curves indicate the temperature of the companion.}
 \label{paper6_fig:ccf}
-\end{figure*}
+\end{figure}
 
 
 
@@ -102,7 +102,7 @@ In addition to the spectroscopic follow-up, we obtained Gemini/NIRI adaptive opt
 
 One star in the imaging sample, HIP 88116, has several nearby sources in the image. We quote the magnitude difference and separation of the brightest source in Table \ref{paper6_tab:imaging_obs}, but stress that \emph{none} of the visible sources is likely to be the companion we see in the spectroscopic data. The two epochs of spectroscopic data show a radial velocity shift of $\Delta v = 30.7\ \mathrm{km\ s}^{-1}$ over the course of roughly one year; this orbital motion is much too large to allow for any of the companions visible in the image (all with separations $ > 1''$ and projected separations $ > 300$ AU).
 
-\begin{figure}
+\begin{figure}[t]
 \centering
 \includegraphics[width=4in]{Figures/paper6_Imaging_Data.pdf}
 \caption{Detection images for all stars in which we detect a companion in the follow-up NIRI data. 
@@ -142,7 +142,7 @@ The IGRINS parameters are less reliable because they rely almost solely on the h
 
 Next, we use Padova stellar evolutionary tracks \citep{Bressan2012} and the isochrones code \citep{isochrones_code} to estimate the mass and age of the system from the measured temperature and surface gravity. As a consistency check, we also interpolate from a table of stellar properties as a function of spectral type \citep{Pecaut2013} to estimate the primary mass from the published spectral types. We show the comparison in Figure \ref{paper6_fig:prim_mass}. We estimate uncertainties in the spectral type mass by assuming a spectral type uncertainty of $\pm 0.5$ spectral types and propagating to mass. There is excellent agreement between the masses we measure and the spectral type masses.
 
-\begin{figure}
+\begin{figure}[t]
 \includegraphics[width=\columnwidth]{Figures/paper6_PrimaryMassEstimates_log.pdf}
 \caption{Comparison of primary star masses derived from our cross-correlation analysis and Padova isochrones \citep{Bressan2012} with those expected from the published spectral type. There is excellent agreement between the two measures across the entire range of masses.}
 \label{paper6_fig:prim_mass}.
@@ -188,7 +188,7 @@ Figure \ref{paper6_fig:detrate_2d} shows a clear diagonal dividing line between 
 
 
 
-\begin{figure}
+\begin{figure}[t]
 \includegraphics[width=\columnwidth]{Figures/paper6_HIP_24244_20130919.pdf}
 \caption{Detection rate as a function of companion temperature and $v\sin{i}$ for HIP 24244. All companions that are shaded yellow are detectable, while companions in the purple region are never detectable. The grids of squares in the lower left and upper right show the low temperature and high temperature grid points we used in the sensitivity analysis. The remaining squares come from assumptions about the shape of the detection rate surface and allow us to fully interpolate (see text for details).}
 \label{paper6_fig:detrate_2d}
@@ -221,7 +221,7 @@ Typical velocities from the gyrochronology relationships are $10-20 \mathrm{km\ 
 We show the marginalized detection rate and mean value of $v\sin{i}$ as a function of temperature in Figure \ref{paper6_fig:marginalized}. Both the detection rate and the average $v\sin{i}$ are smoothly varying, and show the expected behaviour with temperature. The detection rate falls with hotter temperatures because the companions are expected to be fast rotators, which are more difficult to detect. 
 
 
-\begin{figure}
+\begin{figure}[t]
 \includegraphics[width=\columnwidth]{Figures/paper6_HIP_24244_20130919_marginalized.pdf}
 \caption{Marginalized detection rate for the same star as shown in Figure \ref{paper6_fig:detrate_2d}. The fall in detection rate towards hotter stars is caused by the increase in typical rotational speeds.}
 \label{paper6_fig:marginalized}
@@ -241,7 +241,7 @@ In the equation above, $N_i$ is the number of sample stars that contain an estim
 \citet{Gullikson2016} used a very similar method to search for known companions to A- and B-type stars, and found that the detection rate is high for G- and K-dwarf companions but very low for hot companions. The search grid used in this work includes much hotter temperatures, and we have several detections of hot companions (see Table \ref{paper6_tab:companions}). We test to determine if the completeness is reasonable at large mass ratios by comparing to known binary systems. We detect 15 of the 25 stars in our sample with a hot ($T > 7000\ K$) companion in either the Washington Double Star Catalog \citep{WDS} or the Ninth Catalog of Spectroscopic Binary Orbits \citep{SB9}. The completeness function for hot, roughly equal-mass companions suggest the probability of detection if $\sim 80\%$, which is still incompatible with our low detection rate. The discrepancy may be due to an underestimate of the typical rotation rates for hot stars, which we use when marginalizing out the dependence on $v\sin{i}$. Additionally, rapidly rotating companions, especially when they have a similar temperature to the primary, are more difficult to detect if they have a small radial velocity offset from the primary star. While the injection and recovery experiments do sample velocity space to account for this, they may be over-sampling companions with very large velocity offsets and producing anomalously high detection rates. We account for the discrepancy by introducing a scaling factor: we multiply the estimated detection rate for all companions with $T > 7000\ K$ by $f=0.8$. 
 
 
-\begin{figure}
+\begin{figure}[t]
 \includegraphics[width=\columnwidth]{Figures/paper6_SurveyCompleteness.pdf}
 \caption{Survey completeness as a function of mass ratio ($q$).}
 \label{paper6_fig:completeness}
@@ -329,7 +329,7 @@ With the fitted malmquist-correction polynomial, we then substitute $P(q|\vec{\t
 We show the resulting fits in Figure \ref{paper6_fig:mrd}. The $1\sigma$ uncertainties in the bin heights from the histogram model are shown as error bars, and we overplot 300 samples of the lognormal distribution fit to show the spread allowed by the data. The best-fit power law is plotted with a red dot-dashed line. We also estimate the mass-ratio distribution expected from random pairing of the Kroupa Initial Mass Function (IMF), and show the result in yellow. We estimate the distribution by drawing 100000 primary stars from the IMF with masses between $1.5 < M/M_{\odot} < 20$. We then draw companions from the same IMF, with the restriction that the companion has a lower mass than the primary. The result plotted in yellow in Figure \ref{paper6_fig:mrd} is a gaussian kernel density estimate of the resulting mass ratios, with a bandwidth of $0.05$.
 
 
-\begin{figure}
+\begin{figure}[t]
 \includegraphics[width=\columnwidth]{Figures/paper6_MRD_total.pdf}
 \caption{mass-ratio distribution for our sample. The data was fit to a histogram, a lognormal distribution, and a power law. The histogram is shown in the solid blue blocks, with $1 \sigma$ uncertainties marked with error bars. The variance of the lognormal  fit is shown with 300 samples from the posterior probability distribution for the parameters in green. We also show the best-fit power law and the mass-ratio distribution resulting from random pairing of the Kroupa initial mass function. Finally, we display the raw mass ratio measurements with associated uncertainties in the cluster of data points near the top of the figure.}
 \label{paper6_fig:mrd}
