Tweaked abstract and layout of first few pages.

--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -42,11 +42,13 @@
 
 \frontmatter
 
-\setcounter{page}{4}
 
 \begin{UTdedication}
 Dedicated to my loving parents, who encouraged my exploration of science from an early age.
 \end{UTdedication}
+
+\cleardoublepage
+\setcounter{page}{5}
 
 \begin{UTacknowledgements}
 I would like to start by thanking everyone who served as a supervisor during part of my thesis. Mike Endl served as my co-supervisor for two years, taught me how to observe on the 2.7m telescope at McDonald observatory, and involved me in the planet search program for the last 5 years. That experience provided many interesting nights, a fun "side project", and gave me the confidence to do much of the observing for my main survey program. Sally Dodson-Robinson served as my thesis supervisor for my first two years. She gave me a great deal of independence in my project, while providing valuable feedback. I would like to thank both her and my current supervisor, Adam Kraus, for nominating me for several UT fellowships and funding me as a research assistant during much of my graduate career. The freedom to work exclusively on research has been invaluable, and facilitated much of the progress that I made. Adam, thank you for being a great advisor. Despite being brand new at this, you provide a great mix of a hands-on style when I need it and hands-off when I don't, and have been nothing but supportive in every way. 
@@ -61,7 +63,7 @@ Finally, I would like to thank all of my friends and colleagues at UT for making
 %\include{preface}
 
 \begin{UTabstract}{Adam Kraus}
-Binary stars and higher-order multiple systems are a ubiquitous outcome of star formation, especially as the system mass increases. The companion mass-ratio distribution is a unique probe into the conditions of the collapsing cloud core and circumstellar disk(s) of the binary fragments. Inside $a \sim 1000$ AU the disks from the two forming stars can interact, and additionally companions can form directly through disk fragmentation. We should therefore expect the mass-ratio distribution of close companions to differ from that of wide companions. This prediction is difficult to test with intermediate-mass primary stars using traditional methods because the contrast ratios that would be required to detect low-mass companions at narrow working angles are not yet achievable. In this thesis, we present a spectroscopic method to detect and characterize close companions to a variety of stars. We demonstrate applications of the method to detection of stars and even planets around sun-like stars, and present the results of a survey searching for companions to A- and B-type stars. As part of the survey, we estimate the temperatures and surface gravity of most of the 341 sample stars, and derive their masses and ages. We additionally estimate the temperatures and masses of the 64 companions we find, 23 of which are new detections. We find that the mass-ratio distribution for our sample has a maximum near $q \sim 0.3$. Our mass-ratio distribution has a very different form than in previous work, where it is usually well-described by a power law, and indicates that close companions to intermediate-mass stars experience significantly different accretion histories or formation mechanisms than wide companions.
+Binary stars and higher-order multiple systems are a ubiquitous outcome of star formation, especially as the system mass increases. The companion mass-ratio distribution is a unique probe into the conditions of the collapsing cloud core and circumstellar disk(s) of the binary fragments. Inside $a \sim 1000$ AU the disks from the two forming stars can interact, and additionally companions can form directly through disk fragmentation. We should therefore expect the mass-ratio distribution of close companions to differ from that of wide companions. This prediction is difficult to test with intermediate-mass primary stars using traditional methods because the contrast ratios that would be required to detect low-mass companions at narrow working angles are not yet achievable. In this thesis, we present a spectroscopic method to detect and characterize close companions to a variety of stars. We demonstrate applications of the method to detection of stars and even planets around sun-like stars, and present the results of a survey searching for companions to A- and B-type stars. As part of the survey, we estimate the temperatures and surface gravity of most of the 341 sample stars, and derive their masses and ages. We additionally estimate the temperatures and masses of the 64 companions we find, 23 of which are new detections. We find that the mass-ratio distribution for our sample has a very different form than in previous work, where it is usually well-described by a power law, and indicates that close companions to intermediate-mass stars experience significantly different accretion histories or formation mechanisms than wide companions.
 \end{UTabstract}
 
 
@@ -70,6 +72,8 @@ Binary stars and higher-order multiple systems are a ubiquitous outcome of star 
 %\tableofcontents.
 
 \listoffigures
+
+\listoftables
 
 \mainmatter
 
