All tables on top of page, rotated some of them.

--- a/paper1.tex
+++ b/paper1.tex
@@ -877,6 +877,8 @@ Archive Facility. Funding for this work was provided by a National Science Found
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\begin{center}
+\clearpage
+\afterpage{%
 \begin{small}
 \begin{longtable}{|cccccc|}
     %\tablecaption{Full star sample}
@@ -953,8 +955,10 @@ Archive Facility. Funding for this work was provided by a National Science Found
         \label{paper1_tab:sample}
 \end{longtable}
 \end{small}
+}
 %\end{center}
 
+\clearpage
 \newpage
 %\begin{center}
    \begin{longtable}{|cccc|}
@@ -1008,6 +1012,8 @@ Archive Facility. Funding for this work was provided by a National Science Found
   
   
 %\begin{center}
+\clearpage
+\afterpage{%
  \begin{small}
    \begin{longtable}{|ccp{6cm}|}
       \caption{Summary of Cross-Correlation Function Peak Rejection Steps. See Section \ref{paper1_sec:results} for more information} \\
@@ -1040,6 +1046,7 @@ Archive Facility. Funding for this work was provided by a National Science Found
     \label{paper1_tab:rejection}
   \end{longtable}
  \end{small}
+ }
 %\end{center}
 
 \scriptsize 
