--- a/paper2.tex
+++ b/paper2.tex
@@ -194,6 +194,8 @@ This research has made use of the Exoplanet Orbit Database and the Exoplanet Dat
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+\clearpage
+\afterpage{%
 \begin{table}
   \centering
     \caption{Physical properties of the HD 189733 and HD 209458 planetary systems. The effective temperatures, masses, and radii are from \cite{Torres2008}, and r (the ratio of the flux in an average spectral line to the flux in the continuum for the planet) are from the model spectra used in this work (See Figure \ref{paper2_fig:modelcomp} and the discussion before Equation \ref{paper2_eqn:snrcrit}).}
@@ -206,10 +208,11 @@ This research has made use of the Exoplanet Orbit Database and the Exoplanet Dat
 
   \label{paper2_tab:planet}
 \end{table}
+}
 
 
-
-
+\clearpage
+\afterpage{%
 \begin{table}
   \centering
   \caption{Summary of minimum S/N ratios needed to detect planets for our test cases. Efficient heat redistribution refers to observations where the dayside and nightside temperatures are the same, while inefficient heat redistribution is when the nightside temperature is half that of the dayside temperature. The model dependence is estimated by using different planet models to cross-correlate against the same observation (see section \ref{paper2_sec:results}). We do not attempt to simulate observations with S/N $>1500$ because such a high value would be very difficult to achieve in the near-infrared.}
@@ -227,10 +230,11 @@ This research has made use of the Exoplanet Orbit Database and the Exoplanet Dat
   \end{tabular}
   \label{paper2_tab:snrcrit}
 \end{table}
+}
 
 
-
-
+\clearpage
+\afterpage{%
 \begin{center}
 \begin{longtable}{|ccccc|}
 
@@ -272,7 +276,7 @@ HD 102956  & 5.66 & 2.06\e{-04} & 2935 & 253.0
 \label{paper2_tab:targetlist}
 \end{longtable}
 \end{center}
-
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%                Figures                          %%%%%%
