--- a/paper3.tex
+++ b/paper3.tex
@@ -39,6 +39,7 @@ TelFit can handle rapidly rotating early-type stars without preprocessing the sp
 The fit to the primary star does not need to be perfect. Indeed, if we could perfectly model stellar spectra there would be little reason to observe them! The purpose of the preprocessing described above is to ensure that telluric lines dominate the spectrum before fitting. Any strong residuals from that process can and should be ignored in the telluric fit. While a physically better solution would be to fit the stellar and telluric spectra simultaneously, the method described above will often work well enough  for most purposes and is much faster than a simultaneous fit.
 
 
+\afterpage{%
 \begin{table}
   \centering
   \caption{Observations used in this paper. }
@@ -65,6 +66,7 @@ The fit to the primary star does not need to be perfect. Indeed, if we could per
   \label{paper3_tab:sample}
 
 \end{table}
+}
 
 
 
