--- a/paper4.tex
+++ b/paper4.tex
@@ -24,6 +24,7 @@ All data were taken at the 2.7 m Harlan J. Smith Telescope at McDonald observato
 We used the \emph{Austral} code \citep{Endl2000} to measure the differential radial velocity of $\psi^1$ Dra A at each observation by comparing each spectrum to a high signal-to-noise ratio template spectrum of the same star. We provide the raw velocity measurements in Table \ref{paper4_tab:rv_data}, as well as the velocities shifted into the system velocity rest frame. The velocity shift necessary to convert from the differential radial velocities to that frame is found in Section \ref{paper4_sec:orbit}. Table \ref{paper4_tab:rv_data} also gives the measurements of the companion radial velocity (described in the next section).
 
 
+\afterpage{%
 \begin{small}
 \begin{longtable}{lrrrrrr}
     
@@ -35,7 +36,8 @@ We used the \emph{Austral} code \citep{Endl2000} to measure the differential rad
 & raw & shifted & $\sigma$  & raw & shifted  & $\sigma$ \\ \hline
     \endfirsthead
 
-    \\ \hline
+    
+    \caption{ - (Continued)} \\ \hline
     Julian Date & \multicolumn{3}{c}{Primary RV (km/s)} & \multicolumn{3}{c}{Secondary RV (km/s)} \\
 & raw & shifted & $\sigma$  & raw & shifted  & $\sigma$ \\ \hline
     \endhead
@@ -127,7 +129,7 @@ We used the \emph{Austral} code \citep{Endl2000} to measure the differential rad
   
 \end{longtable}
 \end{small}
-
+}
 
 
 
