--- a/paper5.tex
+++ b/paper5.tex
@@ -345,7 +345,8 @@ We would like to thank Bill Cochran and Mike Endl for observing some of the spec
 %%%%%%%              Figures                 %%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
+\clearpage
+\afterpage{%
 \begin{scriptsize}
 \begin{longtable}{lllcccrcc}
     
@@ -555,11 +556,12 @@ We would like to thank Bill Cochran and Mike Endl for observing some of the spec
 
 \end{longtable}
 \end{scriptsize}
+}
 
 
 
-
-
+\clearpage
+\afterpage{%
 \begin{scriptsize}
 \begin{longtable}{lcccccrccc}
     
@@ -671,11 +673,13 @@ We would like to thank Bill Cochran and Mike Endl for observing some of the spec
   
 \end{longtable}
 \end{scriptsize}
+}
 
 
 
 
-
+\newpage
+\afterpage{%
 \begin{scriptsize}
 \begin{longtable}{lcccccrccc}
     
@@ -742,11 +746,13 @@ We would like to thank Bill Cochran and Mike Endl for observing some of the spec
 
 \end{longtable}
 \end{scriptsize}
+}
 
 
 
 
-
+\newpage
+\afterpage{%
 \begin{scriptsize}
 \begin{longtable}{cccc}
     
@@ -794,13 +800,15 @@ We would like to thank Bill Cochran and Mike Endl for observing some of the spec
 
 \end{longtable}
 \end{scriptsize}
+}
 
 
 
 
 
 
-
+\newpage
+\afterpage{%
 \begin{scriptsize}
 \begin{longtable}{cccc}
     
@@ -844,12 +852,14 @@ We would like to thank Bill Cochran and Mike Endl for observing some of the spec
 
 \end{longtable}
 \end{scriptsize}
+}
 
 
 
 
 
-
+\newpage
+\afterpage{%
 \begin{scriptsize}
 \begin{longtable}{cccccccc}
     
@@ -898,5 +908,5 @@ Star & (K) & (dex) & ($\mathrm{km\ s}^{-1}$) & (K) & (km s$^{-1}$) \\ \hline
 
 \end{longtable}
 \end{scriptsize}
-
+}
 
