--- a/gullikson-thesis.tex
+++ b/gullikson-thesis.tex
@@ -9,6 +9,8 @@
 \usepackage{amsmath, amssymb}
 \usepackage{url}
 \usepackage{subfigure}
+\usepackage{afterpage}
+\usepackage{pdflscape} % for 'landscape' environment
 \usepackage[pagebackref]{hyperref} % Handy for links, can comment for plain PDF
 \bibliographystyle{aasjournal}
 
