--- a/paper6.tex
+++ b/paper6.tex
@@ -396,9 +396,9 @@ The Hobby-Eberly Telescope (HET) is a joint project of the University of Texas a
 
 Based on observations at Cerro Tololo Inter-American Observatory, National Optical Astronomy Observatory (NOAO Prop. IDs: 13A-0139, 13B-0112, 2014A-0260, 14A-0260, 15A-0245; PI: Kevin Gullikson), which is operated by the Association of Universities for Research in Astronomy (AURA) under a cooperative agreement with the National Science Foundation. 
 
-
-\begin{tiny}
-\begin{longtable}{|l|lrrrrllllll|}
+\begin{landscape}
+\begin{scriptsize}
+\begin{longtable}{|l|lrrrrlllll|}
     
     \caption{Sample Properties.\\
              The spectral types, coordinates, V-band magnitudes, and parallax measurements are taken from the Simbad database; the spectral type given is that of the brightest star if part of a known multiple system. The "Ref" column denotes the reference for the stellar effective temperature, surface gravity, mass, and age. The references are: [1]: \citep{David2015}; [2]: This study. \label{paper6_tab:sample}} 
@@ -761,10 +761,13 @@ Based on observations at Cerro Tololo Inter-American Observatory, National Optic
   HIP 118243 &      B1V &    23:59:00.54 &   +55:45:17.74 &   4.997 &      0.72 &           \nodata &         \nodata &                \nodata &               \nodata & \nodata
 
 \end{longtable}
-\end{tiny}
+\end{scriptsize}
+\end{landscape}
 
 
-
+\newpage
+\clearpage
+\afterpage{%
 \begin{scriptsize}
 \begin{longtable}{|l|rlrr|}
     
@@ -1290,12 +1293,13 @@ Based on observations at Cerro Tololo Inter-American Observatory, National Optic
 
 \end{longtable}
 \end{scriptsize}
+}
 
 
 
-
-
-\begin{tiny}
+\clearpage
+\begin{landscape}
+\begin{scriptsize}
 \begin{longtable}{|l|llllllll|}
     
     \caption{NIRI Observation log.}
@@ -1336,12 +1340,13 @@ Based on observations at Cerro Tololo Inter-American Observatory, National Optic
  HIP 115115 &  4.96 &  2015-10-18 &   40x0.4 & $1.497 +/- 0.002$ & $313.14 \pm 0.08$ & $2.54 \pm 0.04$ & $1.3^{+0.28}_{-0.19}$ & $120.0 \pm 0.17$
 
 \end{longtable}
-\end{tiny}
+\end{scriptsize}
+\end{landscape}
 
 
 
-
-
+\clearpage
+\afterpage{%
 \begin{scriptsize}
 \begin{longtable}{|l|rrlrrrll|}
     
@@ -1432,5 +1437,5 @@ Based on observations at Cerro Tololo Inter-American Observatory, National Optic
  
 \end{longtable}
 \end{scriptsize}
-
+}
 
